alert fiende har ingen hp igjen

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -413,6 +413,12 @@
 
       async function counterAttack() {
         try {
+          if (enemy.currentHP <= 0) {
+            enemy.alive = false;
+            alert("Fiendens Pokémon har ingen HP igjen!");
+            await replaceFaintedPokemon();
+            return;
+          }
           const damage = generateRandomDamage(5, 15);
           myPokemon.currentHP -= damage;
 
