--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -416,8 +416,8 @@
           if (enemy.currentHP <= 0) {
             enemy.alive = false;
             alert("Fiendens Pokémon har ingen HP igjen!");
-            await replaceFaintedPokemon();
-            return;
+            const enemyImage = document.querySelector(".enemy-container");
+            enemyImage.remove();
           }
           const damage = generateRandomDamage(5, 15);
           myPokemon.currentHP -= damage;
