Lagt til flere DIV for å hente inn flere pokemon

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -33,6 +33,7 @@
           </div>
         </div>
       </div>
+
       <!--Container med min pokemons attacks -->
       <div class="my-attack-container">
         <ul id="skills-list">
@@ -47,7 +48,19 @@
       <div class="enemy-container">
         <div class="img-container enemy"></div>
       </div>
+      <div class="enemy-container">
+        <div class="img-container enemy"></div>
+      </div>
+      <div class="enemy-container">
+        <div class="img-container enemy"></div>
+      </div>
       <!-- Bildecontainer for min pokemon-->
+      <div class="my-pokemon-container">
+        <div class="img-container my-pokemon"></div>
+      </div>
+      <div class="my-pokemon-container">
+        <div class="img-container my-pokemon"></div>
+      </div>
       <div class="my-pokemon-container">
         <div class="img-container my-pokemon"></div>
       </div>
