Flytte bakgrunnsbildet bakerst, slik at de nye pokemon kommer fram

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -9,7 +9,7 @@
     <img
       src="/assets/bakgrunnsbilde.jpg"
       alt="bakgrunnsbilde"
-      style="position: fixed; top: 0; left: 0; width: 100%"
+      style="position: fixed; top: 0; left: 0; width: 100%; z-index: -1"
     />
     <div class="main-container">
       <!--FIENDE-->
