lagt til 3 div-er i HTML for å legge inn random pokemon

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -12,24 +12,66 @@
       style="position: fixed; top: 0; left: 0; width: 100%; z-index: -1"
     />
     <div class="main-container">
-      <!--FIENDE-->
+      <!--FIENDE //enemy-health-container-->
       <div class="enemy-health-container">
-        <div class="healthbar-container">
-          <div class="healthbar enemy-health"></div>
-          <div class="text-container">
-            <p id="enemy-name-txt">Fiendens navn</p>
-            <p id="enemy-health-txt"></p>
+        <div id="enemy1-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar enemy-health"></div>
+            <div class="text-container">
+              <p id="enemy-name-txt">Fiendens navn</p>
+              <p id="enemy-health-txt"></p>
+            </div>
+          </div>
+        </div>
+
+        <div id="enemy2-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar enemy-health"></div>
+            <div class="text-container">
+              <p id="enemy-name-txt">Fiendens navn</p>
+              <p id="enemy-health-txt"></p>
+            </div>
+          </div>
+        </div>
+
+        <div id="enemy3-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar enemy-health"></div>
+            <div class="text-container">
+              <p id="enemy-name-txt">Fiendens navn</p>
+              <p id="enemy-health-txt"></p>
+            </div>
           </div>
         </div>
       </div>
 
-      <!--MIN POKEMON-->
+      <!--MIN POKEMON //my-pokemon-health-container-->
       <div class="my-pokemon-health-container">
-        <div class="healthbar-container">
-          <div class="healthbar my-pokemon-health"></div>
-          <div class="text-container">
-            <p id="my-pokemon-name"></p>
-            <p id="my-pokemon-health-txt"></p>
+        <div id="my1-pokemon-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar my-pokemon-health"></div>
+            <div class="text-container">
+              <p id="my-pokemon-name">Min Pokémons navn</p>
+              <p id="my-pokemon-health-txt"></p>
+            </div>
+          </div>
+        </div>
+        <div id="my2-pokemon-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar my-pokemon-health"></div>
+            <div class="text-container">
+              <p id="my-pokemon-name">Min Pokémons navn</p>
+              <p id="my-pokemon-health-txt"></p>
+            </div>
+          </div>
+        </div>
+        <div id="my3-pokemon-health-container">
+          <div class="healthbar-container">
+            <div class="healthbar my-pokemon-health"></div>
+            <div class="text-container">
+              <p id="my-pokemon-name">Min Pokémons navn</p>
+              <p id="my-pokemon-health-txt"></p>
+            </div>
           </div>
         </div>
       </div>
@@ -44,11 +86,24 @@
       </div>
 
       <!-- Bildenontainere fienden -->
-      <div class="enemy-container">
+      <div class="enemy-container first-enemy">
         <div class="img-container enemy"></div>
       </div>
+      <div class="enemy-container second-enemy">
+        <div class="img-container enemy"></div>
+      </div>
+      <div class="enemy-container third-enemy">
+        <div class="img-container enemy"></div>
+      </div>
+
       <!-- Bildecontainer for min pokemon-->
-      <div class="my-pokemon-container">
+      <div class="my-pokemon-container first-mp">
+        <div class="img-container my-pokemon"></div>
+      </div>
+      <div class="my-pokemon-container second-mp">
+        <div class="img-container my-pokemon"></div>
+      </div>
+      <div class="my-pokemon-container third-mp">
         <div class="img-container my-pokemon"></div>
       </div>
     </div>
