--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -12,6 +12,7 @@
       style="position: fixed; top: 0; left: 0; width: 100%; z-index: -1"
     />
     <div class="main-container">
+      <div id="show-all-pokemon"></div>
       <!--FIENDE //enemy-health-container-->
       <div class="enemy-health-container">
         <div id="enemy1-health-container">
@@ -24,7 +25,7 @@
           </div>
         </div>
 
-        <div id="enemy2-health-container">
+        <div id="enemy-health-container">
           <div class="healthbar-container">
             <div class="healthbar enemy-health"></div>
             <div class="text-container">
@@ -34,7 +35,7 @@
           </div>
         </div>
 
-        <div id="enemy3-health-container">
+        <div id="enemy-health-container">
           <div class="healthbar-container">
             <div class="healthbar enemy-health"></div>
             <div class="text-container">
@@ -61,7 +62,7 @@
             <div class="healthbar my2-pokemon-health"></div>
             <div class="text-container">
               <p id="my-pokemon-name">Min Pokémons navn</p>
-              <p id="my-pokemon-health-txt"></p>
+              <p id="my-pokemon-health-txt">HP:</p>
             </div>
           </div>
         </div>
@@ -70,7 +71,7 @@
             <div class="healthbar my3-pokemon-health"></div>
             <div class="text-container">
               <p id="my-pokemon-name">Min Pokémons navn</p>
-              <p id="my-pokemon-health-txt"></p>
+              <p id="my-pokemon-health-txt">HP:</p>
             </div>
           </div>
         </div>
@@ -319,19 +320,124 @@
 
       //Hardkode fiende 2 og 3
       const getEnemy2 = document.querySelector(
-        "enemy2-health-container .enemy-container second-enemy"
+        "#enemy2-health-container .enemy-container.second-enemy"
       );
+
       const getEnemy3 = document.querySelector(
-        "enemy3-health-container .enemy-container third-enemy"
+        "#enemy3-health-container .enemy-container.third-enemy"
       );
 
       //Hardkode myPokemon 2 og 3
       const getMyPokemon2 = document.querySelector(
-        "myPokemon2-health-container .mp-container second-mp"
+        "#my2-pokemon-health-container .my2-pokemon-container.second-mp"
       );
       const getMyPokemon3 = document.querySelector(
-        "myPokemon3-health-container .mp-container third-mp"
+        "#my3-pokemon-health-container .my-pokemon-container.third-mp"
       );
+      /*
+       async function fetchAndUpdatePokemon(containerElement) {
+         try {
+           console.log("inne i fetchAndUptate");
+           const randomPokemonData = await fetchRandomPokemon(); // Hent tilfeldige Pokémon-data
+           const pokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${randomPokemonData.id}.png`;
+
+           // Oppdater innholdet i containerElement med Pokémon-dataene
+           containerElement
+             .querySelectorAll(".my-pokemon-health-txt")
+             .forEach((nameElement) => {
+               nameElement.textContent = randomPokemonData.name;
+             });
+           containerElement.querySelectorAll(".img-container").src =
+             pokemonImgUrl;
+           containerElement.querySelectorAll(
+             ".my-pokemon-health-txt"
+           ).textContent = `HP: ${randomPokemonData.hp}`;
+         } catch (error) {
+           console.error("Feil ved lasting av Pokémon-data", error);
+         }
+       }
+
+
+       // Bruk funksjonen for å oppdatere fiende 2 og min Pokémon 2
+       fetchAndUpdatePokemon([getEnemy2, getMyPokemon2]);
+       console.log(fetchAndUpdatePokemon);*/
+
+      const showAllPokemon = document.querySelector("#show-all-pokemon");
+      const createPokemonName = document.querySelector("#create-pokemon-name");
+
+      async function fetchPokemon() {
+        try {
+          const pokemonRequest = await fetch(
+            "https://pokeapi.co/api/v2/pokemon/?limit=50"
+          );
+
+          const result = await pokemonRequest.json();
+          const pokemonUrls = result.results.map((pokemon) => pokemon.url);
+          const pokemonData = await Promise.all(
+            pokemonUrls.map((url) =>
+              fetch(url).then((response) => response.json())
+            )
+          );
+          allPokemons = pokemonData;
+          displayPokemons(allPokemons);
+        } catch (error) {
+          console.error("Oisann! Klarte ikke å laste inn Pokémon!", error);
+
+          const pokemonData = Promise.all(
+            pokemonUrls.map((url) =>
+              fetch(url).then((response) => response.json())
+            )
+          );
+          const allPokemons = pokemonData;
+        }
+      }
+
+      function displayPokemons(pokemons) {
+        showAllPokemon.innerHTML = "";
+        const selectedIndexes = [];
+        while (selectedIndexes.length < 4) {
+          const randomIndex = Math.floor(Math.random() * pokemons.length);
+          if (!selectedIndexes.includes(randomIndex)) {
+            const pokemonCard = createPokemonCard(pokemons[randomIndex]);
+            showAllPokemon.appendChild(pokemonCard);
+            selectedIndexes.push(randomIndex);
+          }
+        }
+      }
+
+      function createPokemonCard(pokemon) {
+        //Henter pokemon sin nummer-id, for å knytte opp mot ekstern bildedatabase
+        const pokemonNumber = pokemon.id;
+        //Link til pokeAPIets github med bilderessurser
+        const pokemonImageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png`;
+
+        const pokemonType = pokemon.types[0].type.name;
+
+        //lager ny div med informasjonen fra APIet
+        //pokemonData.name brukes for å få opp navnet, types for å få typen. Bruke array 0 for å få første typen, ikke alle.
+        const pokemonCard = document.createElement("div");
+        pokemonCard.innerHTML = `
+           <p>Navn: ${pokemon.name}</p>
+           <p>HP: ${getHP(pokemon)}</p>
+           `;
+
+        //legge til nytt element(bilde)
+        const imgCard = document.createElement("img");
+        imgCard.src = pokemonImageUrl;
+        pokemonCard.appendChild(imgCard);
+
+        return pokemonCard;
+      }
+      fetchPokemon();
+
+      function getRandomImg() {
+        const randomIndex = Math.floor(Math.random() * allPokemons.length);
+        return createPokemonId[randomIndex];
+
+        const selectedPokemons = randomIndexes.map(
+          (index) => allPokemons[index]
+        );
+      }
 
       //hente inn attack-container og skills
       const myPokemonContainer = document.querySelector(".my-attack-container");
@@ -502,19 +608,19 @@
         }
       }
       /*
-      function enemyAttack() {
-        if (parseInt(enemy.currentHP) <= 0) {
-          enemy.alive = false;
-          const selectedEnemy = document.querySelectorAll(
-            `.img-container .enemy`
-          );
-          if (selectedEnemy.length > 0) {
-            selectedEnemy.forEach((pokemon) => pokemon.remove());
-          }
-          alert(`Dine Pokémons har ingen HP igjen, spillet er tapt!`);
-          replaceFaintedPokemon();
-        }
-      }*/
+             function enemyAttack() {
+               if (parseInt(enemy.currentHP) <= 0) {
+                 enemy.alive = false;
+                 const selectedEnemy = document.querySelectorAll(
+                   `.img-container .enemy`
+                 );
+                 if (selectedEnemy.length > 0) {
+                   selectedEnemy.forEach((pokemon) => pokemon.remove());
+                 }
+                 alert(`Dine Pokémons har ingen HP igjen, spillet er tapt!`);
+                 replaceFaintedPokemon();
+               }
+             }*/
 
       async function replaceFaintedPokemon() {
         try {
