--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -275,7 +275,7 @@
             container.style.border = "2px solid black";
           });
 
-          //angrepspanel
+          //fiendens healthbar
           enemyHealthContainer.style.backgroundColor = "pink";
           enemyHealthContainer.style.position = "fixed";
           enemyHealthContainer.style.right = "50px";
@@ -299,7 +299,7 @@
 
           //style myPokemons bildecontainer
           myPokemonContainer.style.position = "fixed";
-          myPokemonContainer.style.bottom = "50px";
+          myPokemonContainer.style.bottom = "100px";
           myPokemonContainer.style.left = "400px";
 
           //Fetch og display skills (move)
@@ -663,7 +663,7 @@
             ".my-pokemon-container"
           );
         } catch (error) {
-          console.error("HMMMM.. HP har gått i minus", error);
+          console.error("HMMMM.. Min pokemon klarer ikke å angripe", error);
         }
       }
 
